added Footer section

--- a/index.html
+++ b/index.html
@@ -62,13 +62,11 @@
         </nav>
         <!-- nav section end here  -->
         <section class="mb-24 mt-3 ">
-            <!-- banner section start here  VGhpcyBjb2RlIHdyaXR0ZW4gYnkgQWJoaWppdCBEYXMgKGNoYW5jaGFsKQ==-->
+            <!-- banner section start here -->
             <div class="container mx-auto ">
                 <div class="carousel w-full h-40 lg:h-full">
                     <div id="slide1"
                         class="carousel-item relative w-full bg-[url(images/1.png)] lg:h-[80vh] lg:flex items-center justify-center bg-contain rounded-lg bg-no-repeat lg:bg-cover object-cover ">
-
-
                         <div class="absolute lg:bottom-2 transform -translate-y-1/2 lg:left-12 lg:right-5 top-28">
 
                             <a href="#slide3" class="btn btn-circle bg-black text-white">❮</a>
@@ -184,7 +182,7 @@
                 </div>
                 <!-- box -2 -->
                 <div class="relative">
-                    <img class="w-auto h-full" src="Images/3.png" alt="">
+                    <img class="w-auto h-full" src="./Images/3.png" alt="">
                     <div class="absolute lg:bottom-5 lg:left-14 lg:space-y-3 bottom-1 left-1">
                         <h1 class="text-white font-extrabold lg:text-3xl">Junior Program</h1>
                         <p class="text-white lg:w-2/3 text-[11px] lg:text-[16px] w-2/3">"Our Junior Program fosters
@@ -505,17 +503,17 @@
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-6  ">
                 <div class="p-12">
                     <div class="bg-green-50 p-12 space-y-4 mb-6 rounded-lg">
-                        <img src="Images/Group 1171275317.png" alt="">
+                        <img src="./Images/Group 1171275317.png" alt="">
                         <h2 class="text-zinc-400">Phone Number : </h2>
                         <p class="font-bold">(+62) 123-321-543</p>
                     </div>
                     <div class="bg-yellow-50 p-12 space-y-4 mb-6 rounded-lg">
-                        <img src="Images/Group 1171275318.png" alt="">
+                        <img src="./Images/Group 1171275318.png" alt="">
                         <h2 class="text-zinc-400">Email : </h2>
                         <p class="font-bold ">hockeys@ <br>support.com</p>
                     </div>
                     <div class="bg-cyan-100 p-12 space-y-4 mb-6 rounded-lg">
-                        <img src="Images/Group 1171275321.png" alt="">
+                        <img src="./Images/Group 1171275321.png" alt="">
                         <h2 class="text-zinc-400">Location : </h2>
                         <p class="font-bold">152/1 Mohakhali Wireless Gate</p>
                     </div>
